# OPOE

./: CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  all_code.txt  app.py  gbm_path_euler_solve.csv  gbm_path_milstein_solve.csv  heston_paths.csv  integrand_values.csv  main.cpp  make.dep  pp.txt  pyproject.toml  setup_deps.sh  sv_path_euler_solve.csv  sv_path_ijk_solve.csv  sv_path_milstein_solve.csv
bindings/: bindings.cpp
doc/html/: _base_option_pricer_8hpp.html  _base_option_pricer_8hpp__dep__incl.map  _base_option_pricer_8hpp__dep__incl.md5  _base_option_pricer_8hpp__incl.map  _base_option_pricer_8hpp__incl.md5  _base_option_pricer_8hpp_source.html  _c_f_option_pricer_8cpp.html  _c_f_option_pricer_8cpp_source.html  _c_f_option_pricer_8hpp.html  _c_f_option_pricer_8hpp__incl.map  _c_f_option_pricer_8hpp__incl.md5  _c_f_option_pricer_8hpp_source.html  _density_base_8hpp.html  _density_base_8hpp__dep__incl.map  _density_base_8hpp__dep__incl.md5  _density_base_8hpp__incl.map  _density_base_8hpp__incl.md5  _density_base_8hpp_source.html  _f_f_t_option_pricer_8cpp.html  _f_f_t_option_pricer_8cpp_source.html  _f_f_t_option_pricer_8hpp.html  _f_f_t_option_pricer_8hpp__dep__incl.map  _f_f_t_option_pricer_8hpp__dep__incl.md5  _f_f_t_option_pricer_8hpp__incl.map  _f_f_t_option_pricer_8hpp__incl.md5  _f_f_t_option_pricer_8hpp_source.html  _f_f_t_w_8hpp.html  _f_f_t_w_8hpp__dep__incl.map  _f_f_t_w_8hpp__dep__incl.md5  _f_f_t_w_8hpp__incl.map  _f_f_t_w_8hpp__incl.md5  _f_f_t_w_8hpp_source.html  _file_reader_8hpp.html  _file_reader_8hpp__dep__incl.map  _file_reader_8hpp__dep__incl.md5  _file_reader_8hpp__incl.map  _file_reader_8hpp__incl.md5  _file_reader_8hpp_source.html  _fin_models_8hpp.html  _fin_models_8hpp__dep__incl.map  (+659 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+100 more)
doc/latex/: _base_option_pricer_8hpp.tex  _base_option_pricer_8hpp__dep__incl.md5  _base_option_pricer_8hpp__incl.md5  _c_f_option_pricer_8cpp.tex  _c_f_option_pricer_8hpp.tex  _c_f_option_pricer_8hpp__incl.md5  _density_base_8hpp.tex  _density_base_8hpp__dep__incl.md5  _density_base_8hpp__incl.md5  _f_f_t_option_pricer_8cpp.tex  _f_f_t_option_pricer_8hpp.tex  _f_f_t_option_pricer_8hpp__dep__incl.md5  _f_f_t_option_pricer_8hpp__incl.md5  _f_f_t_w_8hpp.tex  _f_f_t_w_8hpp__dep__incl.md5  _f_f_t_w_8hpp__incl.md5  _file_reader_8hpp.tex  _file_reader_8hpp__dep__incl.md5  _file_reader_8hpp__incl.md5  _fin_models_8hpp.tex  _fin_models_8hpp__dep__incl.md5  _fin_models_8hpp__incl.md5  _m_c_option_pricer_8hpp.tex  _m_c_option_pricer_8hpp__dep__incl.md5  _m_c_option_pricer_8hpp__incl.md5  _mixture_density_8hpp.tex  _mixture_density_8hpp__dep__incl.md5  _mixture_density_8hpp__incl.md5  _monomials_8hpp.tex  _monomials_8hpp__incl.md5  _o_p_e_option_pricer_8hpp.tex  _o_p_e_option_pricer_8hpp__dep__incl.md5  _o_p_e_option_pricer_8hpp__incl.md5  _o_p_o_e__traits_8hpp.tex  _o_p_o_e__traits_8hpp__dep__incl.md5  _o_p_o_e__traits_8hpp__incl.md5  _orthogonal_polynomials_8hpp.tex  _orthogonal_polynomials_8hpp__dep__incl.md5  _orthogonal_polynomials_8hpp__incl.md5  _orthogonal_validator_8cpp.tex  (+230 more)
include/options/: BaseOptionPricer.hpp  CFOptionPricer.hpp  FFTOptionPricer.hpp  MCOptionPricer.hpp  OPEOptionPricer.hpp  Payoff.hpp
include/polynomials/: Monomials.hpp  OrthogonalPolynomials.hpp  OrthogonalValidator.cpp  Polynomials.hpp
include/quadrature/: QuadratureRule.hpp  QuadratureRuleAbstract.hpp  QuadratureRuleHolder.hpp
include/quantized_grids/: 102_1_nopti  104_1_nopti  105_1_nopti  106_1_nopti  107_1_nopti  111_1_nopti  112_1_nopti  113_1_nopti  115_1_nopti  119_1_nopti  11_1_nopti  120_1_nopti  122_1_nopti  124_1_nopti  125_1_nopti  12_1_nopti  134_1_nopti  136_1_nopti  137_1_nopti  141_1_nopti  142_1_nopti  143_1_nopti  146_1_nopti  147_1_nopti  149_1_nopti  14_1_nopti  151_1_nopti  152_1_nopti  154_1_nopti  157_1_nopti  160_1_nopti  162_1_nopti  164_1_nopti  165_1_nopti  166_1_nopti  167_1_nopti  168_1_nopti  169_1_nopti  16_1_nopti  170_1_nopti  (+475 more)
include/sde/: FinModels.hpp  SDE.hpp
include/stats/: DensityBase.hpp  MixtureDensity.hpp
include/traits/: OPOE_traits.hpp
include/utils/: Utils.hpp
options/: BaseOptionPricer.hpp  CFOptionPricer.cpp  CFOptionPricer.hpp  FFTOptionPricer.hpp  MCOptionPricer.hpp  OPEOptionPricer.hpp  OptionPricer.hpp  Payoff.hpp
polynomials/: Monomials.hpp  OrthogonalPolynomials.hpp  OrthogonalValidator.cpp  OrthogonalValidator.hpp  Polynomials.hpp
quadrature/: Projector.hpp  QuadratureRule.hpp  QuadratureRuleAbstract.hpp  QuadratureRuleHolder.hpp  QuadratureWrappers.hpp
quantized_grids/: 100_1_nopti  101_1_nopti  103_1_nopti  108_1_nopti  109_1_nopti  110_1_nopti  114_1_nopti  116_1_nopti  117_1_nopti  118_1_nopti  121_1_nopti  123_1_nopti  126_1_nopti  127_1_nopti  128_1_nopti  129_1_nopti  130_1_nopti  131_1_nopti  132_1_nopti  133_1_nopti  135_1_nopti  138_1_nopti  139_1_nopti  13_1_nopti  140_1_nopti  144_1_nopti  145_1_nopti  148_1_nopti  150_1_nopti  153_1_nopti  155_1_nopti  156_1_nopti  158_1_nopti  159_1_nopti  15_1_nopti  161_1_nopti  163_1_nopti  173_1_nopti  174_1_nopti  175_1_nopti  (+441 more)
sde/: FinModels.hpp  SDE.hpp
src/: main.cpp
stats/: DensityBase.hpp  MixtureDensity.hpp  Quantization.hpp
traits/: OPOE_traits.hpp
utils/: FFTW.hpp  FileReader.hpp  Utils.hpp
